# implicit_fluids

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
implicit_fluids/: __init__.py  models.py  steppers.py  testcases.py  timestepper.py
implicit_fluids/scripts/: gswe.py
implicit_gfd/: ics.py  models.py  steppers.py  testcases.py  timestepper.py
serving_suggestions/: energy_conserving_swe
tests/: test_swe.py
