[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "implicit_fluids"
version = "0.1"
authors = [
  { name = "Colin Cotter" },
]
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python",
]

[project.optional-dependencies]
lint = [
  "flake8",
]
test = [
  "pytest",
  "pytest-cov",
  "pytest-timeout",
]

[tool.setuptools.packages.find]
include = ["implicit_fluids*"]
