[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "implicit_fluids"
version = "0.1"
authors = [
  { name = "Colin Cotter" },
]
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python",
]
dependencies = [
   "pandas",
   "irksome @ git+https://github.com/firedrakeproject/Irksome.git@master",
]

[project.scripts]
if-gswe = "implicit_fluids:gswe"

[project.optional-dependencies]
lint = [
  "flake8",
]
test = [
  "pytest",
  "pytest-cov",
  "pytest-timeout",
  "pytest-xdist",
]

[tool.setuptools.packages.find]
include = ["implicit_fluids*"]
